добавление помощи ментору

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <!--  основная навигация-->
       <nav>
-        <a href="/">Wed Studio</a>
+        <a href="./index.html">Wed Studio</a>
         <ul>
           <li>
             <a href="#">Студия</a>
@@ -25,12 +25,12 @@
       </nav>
       <ul>
         <li>
-          <a href="mailto:info@devstudio.com" aria-label="E-mail">
+          <a href="mailto:info@devstudio.com">
             info@devstudio.com
           </a>
         </li>
         <li>
-          <a href="tel:+380961111111" aria-label="телефон">
+          <a href="tel:+380961111111">
             +38 096 111 11 11
           </a>
         </li>
@@ -38,13 +38,22 @@
     </header>
     <!-- неповторяющийся контент-->
     <main>
+      <!-- Hero -->
+      <section>
+        <h1>
+          эффективные решения для вашего бизнеса
+        </h1>
+        <p>
+          Заказать услугу
+        </p>
+      </section>
       <!--преимущества компании-->
       <section>
         <!-- позже нужно будет сделать невидемым -->
         <h2>Особенности</h2>
         <ul>
           <li>
-            <a href="#" aria-label="антенна"> </a>
+            <a href="#" aria-label="антенна">антенна</a>
             <h3>
               Внимание к деталям
             </h3>
@@ -54,7 +63,7 @@
             </p>
           </li>
           <li>
-            <a href="#" aria-label="часы"> </a>
+            <a href="#" aria-label="часы">часы</a>
             <h3>
               Пунктуальность
             </h3>
@@ -64,7 +73,7 @@
             </p>
           </li>
           <li>
-            <a href="#" aria-label="диаграмма"> </a>
+            <a href="#" aria-label="диаграмма">диаграмма</a>
             <h3>
               Планирование
             </h3>
@@ -74,7 +83,7 @@
             </p>
           </li>
           <li>
-            <a href="#" aria-label="космонавт"> </a>
+            <a href="#" aria-label="космонавт">космонавт</a>
             <h3>
               Современные технологии
             </h3>
@@ -146,16 +155,16 @@
             <!--соц.сети -->
             <ul>
               <li>
-                <a href="#" aria-label="instagram"> </a>
+                <a href="#" aria-label="instagram">instagram</a>
               </li>
               <li>
-                <a href="#" aria-label="twitter"> </a>
+                <a href="#" aria-label="twitter">twitter</a>
               </li>
               <li>
-                <a href="#" aria-label="facebook"> </a>
+                <a href="#" aria-label="facebook">facebook</a>
               </li>
               <li>
-                <a href="#" aria-label="linkedin"> </a>
+                <a href="#" aria-label="linkedin">linkedin</a>
               </li>
             </ul>
           </li>
@@ -175,16 +184,16 @@
             <!--соц.сети -->
             <ul>
               <li>
-                <a href="#" aria-label="instagram"> </a>
+                <a href="#" aria-label="instagram">instagram</a>
               </li>
               <li>
-                <a href="#" aria-label="twitter"> </a>
+                <a href="#" aria-label="twitter">twitter</a>
               </li>
               <li>
-                <a href="#" aria-label="facebook"> </a>
+                <a href="#" aria-label="facebook">facebook</a>
               </li>
               <li>
-                <a href="#" aria-label="linkedin"> </a>
+                <a href="#" aria-label="linkedin">linkedin</a>
               </li>
             </ul>
           </li>
@@ -204,16 +213,16 @@
             <!--соц.сети -->
             <ul>
               <li>
-                <a href="#" aria-label="instagram"> </a>
+                <a href="#" aria-label="instagram">instagram</a>
               </li>
               <li>
-                <a href="#" aria-label="twitter"> </a>
+                <a href="#" aria-label="twitter">twitter</a>
               </li>
               <li>
-                <a href="#" aria-label="facebook"> </a>
+                <a href="#" aria-label="facebook">facebook</a>
               </li>
               <li>
-                <a href="#" aria-label="linkedin"> </a>
+                <a href="#" aria-label="linkedin">linkedin</a>
               </li>
             </ul>
           </li>
@@ -233,16 +242,16 @@
             <!--соц.сети -->
             <ul>
               <li>
-                <a href="#" aria-label="instagram"> </a>
+                <a href="#" aria-label="instagram">instagram</a>
               </li>
               <li>
-                <a href="#" aria-label="twitter"> </a>
+                <a href="#" aria-label="twitter">twitter</a>
               </li>
               <li>
-                <a href="#" aria-label="facebook"> </a>
+                <a href="#" aria-label="facebook">facebook</a>
               </li>
               <li>
-                <a href="#" aria-label="linkedin"> </a>
+                <a href="#" aria-label="linkedin">linkedin</a>
               </li>
             </ul>
           </li>
@@ -256,53 +265,53 @@
         <!-- логотипы компаний -->
         <ul>
           <li>
-            <a href="#" aria-label="YA & CO"> </a>
+            <a href="#" aria-label="YA & CO">YA & CO</a>
           </li>
           <li>
-            <a href="#" aria-label="company tagline here"> </a>
+            <a href="#" aria-label="company tagline here"
+              >company tagline here</a
+            >
           </li>
           <li>
-            <a href="#" aria-label="company"> </a>
+            <a href="#" aria-label="company">company</a>
           </li>
           <li>
-            <a href="#" aria-label="FOSTER PETERS"> </a>
+            <a href="#" aria-label="FOSTER PETERS">FOSTER PETERS</a>
           </li>
           <li>
-            <a href="#" aria-label="brand"> </a>
+            <a href="#" aria-label="brand">brand</a>
           </li>
           <li>
-            <a href="#" aria-label="company tag line"> </a>
+            <a href="#" aria-label="company tag line">company tag line</a>
           </li>
         </ul>
       </section>
     </main>
     <!--подвал-->
     <footer>
-      <a href="/">Wed Studio</a>
+      <a href="./index.html">Wed Studio</a>
       <!-- адресс -->
       <address>
         г. Киев, пр-т Леси Украинки, 26<br />
         <a href="mailto:info@devstudio.com"> info@devstudio.com </a><br />
-        <a href="tel:+380961111111">
-          +38 096 111 11 11
-        </a>
+        <a href="tel:+380961111111">+38 096 111 11 11</a>
       </address>
-      <b>
+      <h2>
         присоединяйтесь
-      </b>
+      </h2>
       <!-- соц.сети -->
       <ul>
         <li>
-          <a href="#" aria-label="instagram"> </a>
+          <a href="#" aria-label="instagram">instagram</a>
         </li>
         <li>
-          <a href="#" aria-label="twitter"> </a>
+          <a href="#" aria-label="twitter">twitter</a>
         </li>
         <li>
-          <a href="#" aria-label="facebook"> </a>
+          <a href="#" aria-label="facebook">facebook</a>
         </li>
         <li>
-          <a href="#" aria-label="linkedin"> </a>
+          <a href="#" aria-label="linkedin">linkedin</a>
         </li>
       </ul>
       <p>2020 | Developed by GoIT Students</p>
